force-app/main/default/objects/Vehicles__c/Vehicles__c.object-meta.xml
<CustomObject>
    <description>List of an actual Vehicle with a VIN</description>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>VEH-{0000000}</displayFormat>
        <label>Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>