force-app/main/default/objects/Vehicles__c/fields/Activator_ModelId__c.field-meta.xml
<CustomField>
    <fullName>Activator_ModelId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Model in the Activator system</inlineHelpText>
    <label>Activator Model Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>