force-app/main/default/objects/Vehicles__c/fields/Activator_VehicleId__c.field-meta.xml
<CustomField>
    <fullName>Activator_VehicleId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Vehicle Id in Activator System</inlineHelpText>
    <label>Activator Vehicle Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>