force-app/main/default/objects/Vehicles__c/fields/BodyStyle__c.field-meta.xml
<CustomField>
    <fullName>BodyStyle__c</fullName>
    <label>Body Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>