force-app/main/default/objects/Vehicles__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>OEM Make of this vehicle</inlineHelpText>
    <label>Make</label>
    <referenceTo>Makes__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>