force-app/main/default/objects/Vehicles__c/fields/Make_Name__c.field-meta.xml
<CustomField>
    <fullName>Make_Name__c</fullName>
    <description>Formula field for Make Name</description>
    <formula>Make__r.MakeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make Name</label>
    <type>Text</type>
</CustomField>