force-app/main/default/objects/Vehicles__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Model of the Vehicle</inlineHelpText>
    <label>Model</label>
    <referenceTo>Models__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>