force-app/main/default/objects/Vehicles__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Formula for Model Name</description>
    <formula>Model__r.ModelName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Name</label>
    <type>Text</type>
</CustomField>