force-app/main/default/objects/Vehicles__c/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <inlineHelpText>Trim level of Vehicle</inlineHelpText>
    <label>Trim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>