force-app/main/default/objects/Vehicles__c/fields/Vin__c.field-meta.xml
<CustomField>
    <fullName>Vin__c</fullName>
    <inlineHelpText>VIN of this vehicle</inlineHelpText>
    <label>VIN</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>